<resources>
    <string name="app_name">codnate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="kode">＼コーデネートはこうでねいと！／</string>
    <string name="kode2">服選びをたぬきがします</string>
    <string name="newAccount">新規に始める人はこちら</string>
    <string name="loginAccount">すでに始めている人はこちら</string>
    <string name="start2_bar">新規登録　＞　性別</string>
    <string name="start3_bar">新規登録　＞　性別　＞　年齢</string>
    <string name="start4_bar">新規登録　＞　性別　＞　年齢　＞　名前</string>
    <string name="start5_bar">新規登録　＞　性別　＞　年齢　＞　名前　＞　タイプ</string>
    <string name="next">次へ</string>
    <string name="back">戻る</string>
    <string name="age">年齢</string>
    <string name="name">名前</string>
    <string name="finish">完了</string>
    <string name="update">編集</string>
    <string name="delete">削除</string>
    <string name="jiko">自己紹介</string>
    <string name="type">タイプ</string>
    <string name="save">保存</string>
    <string name="website">ウェブサイト</string>
    <string name="Mypage_bar">マイページ</string>
    <string name="start2_setumei">性別を選択</string>
    <string name="start3_setumei">年齢を選択</string>
    <string name="start4_setumei">名前を入力</string>
    <string name="start5_setumei">タイプを選択</string>
    <string name="top_bar">こうでねえと</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="closet">closet</string>
    <string name="textview">textview</string>
    <string name="woman">woman</string>
    <string name="wo">woman</string>
    <string name="womn">woman</string>
    <string name="man">man</string>
    <string name="aan">MAN</string>
    <string name="aman">MAN</string>
    <string name="odo">TODO</string>
    <string name="tod">TODO</string>
    <string name="too">TODO</string>
    <string name="tdo">TODO</string>
    <string name="t">TODO</string>
    <string name="to">TODO</string>
    <string name="o">TODO</string>
    <string name="ta">TODO</string>
    <string name="d">TODO</string>
    <string name="button">Button</string>
    <string-array name="list">
        <item>男性</item>
        <item>女性</item>
    </string-array>
    <string-array name="age">
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
    </string-array>

    <string-array name="category">
        <item></item>
        <item>トップス</item>
        <item>ボトムス</item>
        <item>ワンピース</item>
        <item>アウター</item>
        <item>シューズ</item>
        <item>その他</item>
    </string-array>

    <string-array name="tops_sub">
        <item></item>
        <item>ブラウス</item>
        <item>ビスチェ</item>
        <item>キャミソール</item>
        <item>カットソー</item>
        <item>インナー</item>
        <item>ニット</item>
        <item>オフショルダー</item>
        <item>パーカー</item>
        <item>ポロシャツ</item>
        <item>プルオーバー</item>
        <item>シャツ</item>
        <item>セーター</item>
        <item>スウェット</item>
        <item>Tシャツ</item>
        <item>タンクトップ</item>
        <item>チュニック</item>
        <item>その他</item>
    </string-array>

    <string-array name="botoms_sub">
        <item></item>
        <item>カーゴパンツ</item>
        <item>クロップドパンツ</item>
        <item>デニム</item>
        <item>デニムスカート</item>
        <item>フレアスカート</item>
        <item>ハーフパンツ</item>
        <item>マキシ丈スカート</item>
        <item>ミモレスカート</item>
        <item>ミニスカート</item>
        <item>プリーツスカート</item>
        <item>スキニーパンツ</item>
        <item>スウェットパンツ</item>
        <item>タイトスカート</item>
        <item>タックパンツ</item>
        <item>チュールスカート</item>
        <item>ワイドパンツ</item>
        <item>その他</item>
    </string-array>
    <string-array name="onpeace_sub">
        <item></item>
        <item>オールインワン</item>
        <item>キャミドレス</item>
        <item>コンビネゾン</item>
        <item>ドレス</item>
        <item>ひざ丈スカート</item>
        <item>マキシドレス</item>
        <item>ミニドレス</item>
        <item>ニットドレス</item>
        <item>ワンピース</item>
        <item>オーバーオール</item>
        <item>サルペット</item>
        <item>シャツドレス</item>
        <item>その他</item>
    </string-array>
    <string-array name="outer_sub">
        <item></item>
        <item>ブルゾン</item>
        <item>ポンチョ</item>
        <item>カーディガン</item>
        <item>チェスターコート</item>
        <item>コート</item>
        <item>カラーレスジャケット</item>
        <item>デニムジャケット</item>
        <item>ダウンコート</item>
        <item>ダウンジャケット</item>
        <item>ダウンベスト</item>
        <item>ダッフルコート</item>
        <item>ガウン</item>
        <item>ファーコート</item>
        <item>ジャケット</item>
        <item>レザージャケット</item>
        <item>MA_1</item>
        <item>ミリタリージャケット</item>
        <item>モッズコート</item>
        <item>マウンテンジャケット</item>
        <item>ムートンコート</item>
        <item>ピーコート</item>
        <item>レインコート</item>
        <item>その他</item>
    </string-array>
    <string-array name="shoese_sub">
        <item></item>
        <item>ビーチサンダル</item>
        <item>ブーツ</item>
        <item>ブーティー</item>
        <item>ドレスシューズ</item>
        <item>ローファー</item>
        <item>モカシン</item>
        <item>ミュール</item>
        <item>パンプス</item>
        <item>レインシューズ</item>
        <item>サンダル</item>
        <item>スリッポン</item>
        <item>スニーカー</item>
        <item>その他</item>
    </string-array>
    <string-array name="color">
        <item></item>
        <item>ブラック</item>
        <item>ブルー</item>
        <item>ブラウン</item>
        <item>グレー</item>
        <item>グリーン</item>
        <item>オレンジ</item>
        <item>ピンク</item>
        <item>パープル</item>
        <item>レッド</item>
        <item>ホワイト</item>
        <item>イエロー</item>
        <item>その他</item>
    </string-array>
    <string name="title_activity_my_page">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
