<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Start1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="150dp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/kode"
            android:gravity="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kode2"
            android:gravity="center"

            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/touka" />

        <Button
            android:id="@+id/New_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newAccount" />

        <Button
            android:id="@+id/Login_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginAccount" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>