<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="intent.Start3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView13"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start2_bar"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start2_setumei" />

        <LinearLayout
            android:layout_width="399dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textSize="30sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="108dp"
                android:layout_height="50dp"
                android:entries="@array/age"
                android:textSize="50sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="314dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back_start3"
                android:layout_width="206dp"
                android:layout_height="wrap_content"
                android:text="@string/back" />

            <Button
                android:id="@+id/next_start3"
                android:layout_width="206dp"
                android:layout_height="wrap_content"
                android:text="@string/next" />

            <TextView
                android:id="@+id/test3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Test" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>