<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gray_back"
    tools:context="intent.Start4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView13"

            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/frame_style5"
            android:gravity="center"
            android:text="@string/start3_bar"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/frame_style6"
            android:gravity="center"
            android:text="@string/start4_setumei" />

        <LinearLayout
            android:layout_width="399dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="#ffff"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:id="@+id/start4_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffff"
                android:ems="10"
                android:inputType="textPersonName"
                tools:text="未記入" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="314dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back_start4"
                android:layout_width="206dp"
                android:layout_height="wrap_content"
                android:background="@drawable/frame_style4"
                android:elevation="10dp"
                android:text="@string/back" />

            <Button
                android:id="@+id/next_start4"
                android:layout_width="206dp"
                android:layout_height="wrap_content"
                android:background="@drawable/frame_style4"
                android:elevation="10dp"
                android:text="@string/next" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>