<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Start2">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView13"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start2_bar"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start2_setumei" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/mes_pict" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/woman" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/RadioGroupOs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:verticalScrollbarPosition="defaultPosition">

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="206dp"
                android:layout_height="match_parent"
                android:text="男性" />

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="207dp"
                android:layout_height="match_parent"
                android:text="女性" />

        </RadioGroup>

        <TextView
            android:id="@+id/start2_blank"
            android:layout_width="match_parent"
            android:layout_height="100sp" />

        <TextView
            android:id="@+id/start2_error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#F8F03D3D" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back_start2"
                android:layout_width="206dp"
                android:layout_height="wrap_content"
                android:text="@string/back" />

            <Button
                android:id="@+id/next_start2"
                android:layout_width="206dp"
                android:layout_height="wrap_content"
                android:text="@string/next" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>