<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="intent.MyPage">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="179dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"
                android:text="@string/Mypage_bar"
                android:textSize="30dp" />

            <ImageView
                android:id="@+id/mypage_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="50dp"
                android:elevation="10dp"
                app:srcCompat="@drawable/touka" />

            <FrameLayout
                android:id="@+id/name_frame"
                android:layout_width="300dp"
                android:layout_height="56dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="300dp"
                android:layout_marginBottom="450dp"
                android:background="#ffff"
                android:elevation="10dp">

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/mypage_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="textPersonName" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/jiko_frame"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="380dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="450dp"
                android:background="#ffff"
                android:elevation="10dp">

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/jiko" />

                <EditText
                    android:id="@+id/mypage_jiko"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="textPersonName" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/age_frame"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="500dp"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="200dp"
                android:background="#fff"
                android:elevation="10dp">

                <TextView
                    android:id="@+id/textView28"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/age" />

                <Spinner
                    android:id="@+id/mypage_age"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:entries="@array/age" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/type_frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="100dp"
                android:layout_marginTop="560dp"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="130dp"
                android:background="#fff">

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/type" />

                <Spinner
                    android:id="@+id/mypage_type"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </FrameLayout>

        </FrameLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:background="@drawable/frame_style3"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/frame_style3"
        android:text="↩"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>